--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "index.js"
+    "start": "node index.js",
+    "nodemon": "nodemon index.js"
   },
   "author": "Aksah Tekale",
   "license": "ISC",
